fix: page IE align compatibility

--- a/themes/components/pagination.less
+++ b/themes/components/pagination.less
@@ -8,6 +8,14 @@
   >div {
     margin: 0 5px;
   }
+  &&-align-right {
+    justify-content: flex-end;
+    -ms-flex-pack: flex-end;
+  }
+  &&-align-center {
+    justify-content: center;
+    -ms-flex-pack: center;
+  }
   &-pager {
     &-container & {
       position: relative;
